--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,9 @@
         .range([height, 0]);
 
     var color = d3.scaleOrdinal(d3.schemeCategory10);
-    var xAxis = d3.axisBottom(x);
-    var yAxis = d3.axisLeft(y);
+    var xAxis = d3.axisBottom(x).ticks(4);
+    var yAxis = d3.axisLeft(y).ticks(4);
     var numimage  = 0;
-    
 
     var data = {{ data | tojson}};
 
@@ -48,28 +47,10 @@
     var z = [];
 
     data.forEach(function(d, i) {
-        // label.push(d.Label);
-        // pixel.push(d.Pixels);
         label.push(d.label);
         pixel.push(d.fake_image);
         z.push(d.z);
     });
-
-    var zeros = function(n) {
-        if(typeof(n)==='undefined' || isNaN(n)) { return []; }
-        if(typeof ArrayBuffer === 'undefined') {
-          // lacking browser support
-          var arr = new Array(n);
-          for(var i=0;i<n;i++) { arr[i]= 0; }
-          return arr;
-        } else {
-          return new Float64Array(n); // typed arrays are faster
-        }
-    }
-
-    var N = z[0].length;
-    var new_z  = zeros(N);
-    var select_idx = [];
 
     // t-sne
     var opt = {};
@@ -80,6 +61,10 @@
     tsne.initDataRaw(pixel, label);
     data = tsne.getSolution();
 
+    var N = z[0].length;
+    var new_z = new Array(N);
+    for(var i=0;i<N;i++) { new_z[i]= 0; }
+    var select_idx = [];
 
     x.domain(d3.extent(data, function(d) {
         return d[0];
@@ -99,10 +84,12 @@
     svg.append("g")
         .attr("class", "x axis")
         .attr("transform", "translate(0," + height + ")")
+        .style("position", "fixed")
         .call(xAxis);
 
     svg.append("g")
         .attr("class", "y axis")
+        .style("position", "fixed")
         .call(yAxis);
 
     svg.append('g')
@@ -164,14 +151,14 @@
             .attr("y", height/4 - 45)
             .attr("height", 28*3)
             .attr("width", 28*3)
-            .attr("xlink:href", "../static/src/images/plus.png");
+            .attr("xlink:href", "../static/src/images/minus.png");
 
     imageset.append("image")
             .attr("x",  50 +  width / 4 * 1.53)
             .attr("y", height/4 - 45)
             .attr("height", 28*3)
             .attr("width", 28*3)
-            .attr("xlink:href", "../static/src/images/minus.png");
+            .attr("xlink:href", "../static/src/images/plus.png");
 
     imageset.append("image")
             .attr("x",  50 +  width / 4 * 2.53)
@@ -290,21 +277,22 @@
         if (numimage > 0)
         {
             d3.selectAll("image:last-child").remove()
-            if (numimage == 3){
+
+            if (numimage == 2){
                 console.log("plus");
                 for (var j=0;j<N;j++) {
                     new_z[j] += z[i][j];
                 }
                 select_idx.pop(i);
                 console.log(select_idx);
-            } else{
+            } else{ if (numimage== 1  || numimage == 3){
                 console.log("minus");
                 for (var j=0;j<N;j++) {
                     new_z[j] -= z[i][j];
                 }
                 select_idx.pop(i);
                 console.log(select_idx);
-            };
+            } else{console.log("nothing happen")}};
             numimage -= 1;
         }
     };
@@ -320,7 +308,7 @@
             .attr('y', height/4 - 50)
             .attr("xlink:href", canv);
 
-            if (numimage == 0 || numimage  == 1){
+            if (numimage == 0 || numimage  == 2){
                 console.log("plus");
                 for (var j=0;j<N;j++) {
                     new_z[j] += z[i][j];
@@ -358,11 +346,12 @@
     )}
 
     function RemoveAll(){
-        d3.selectAll("image:last-child").remove()
-        d3.selectAll("image:last-child").remove()
-        d3.selectAll("image:last-child").remove()
-        d3.selectAll("image:last-child").remove()
-        numimage =  0
+        while (numimage > 0) {
+            d3.selectAll("image:last-child").remove()
+            numimage -= 1;
+        }
+        numimage =  0;
+        select_idx  = [];
     }
 
     </script>
