--- a/templates/index.html
+++ b/templates/index.html
@@ -148,14 +148,10 @@
 // imageset pallete
     var imageset = d3.select("#imageset").append("svg")
         .attr("width", width + margin.left + margin.right)
-        .attr("height", height/2 - margin.top + margin.bottom)
+        .attr("height", height/1.5 - margin.top + margin.bottom)
         .attr("align", "center")
       .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-
-    // var canvas = imageset;
-    
 
     var iter = 0;
     var t = d3.timer(function(elapsed) {
@@ -165,7 +161,7 @@
 
 // tsne update
     function update() {
-        if (iter > 10) t.stop();
+        if (iter > 500) t.stop();
 
         tsne.step();
         data = tsne.getSolution();
@@ -192,11 +188,13 @@
             });
     }
 
-
 // turn raw pixel value into the image
     var getImgFromArray = function(L, scale, interpolation_result) {
-        // if (interpolation_result==1){}
-        var A = nj.float64(L).reshape(64, 64, 3);
+        if (interpolation_result == 1){
+            var A = nj.float64(L).reshape(384, 384, 3);
+        }else{
+            var A = nj.float64(L).reshape(64, 64, 3);
+        }
         var depth = A.shape[2];
         var sx = A.shape[0];
         var sy = A.shape[1];
@@ -375,19 +373,19 @@
                     .attr("xlink:href", canv);
                     select_idx.push(i);
 
-                    if (numimage == 0 ){
+                    if (numimage == 1){
                         for (var j=0;j<N;j++) {
                             new_z[j] += z[i][j];
                         } 
-                    } else if (numimage == 1 ){
+                    } else if (numimage == 2){
                         for (var j=0;j<N;j++) {
                             new_z2[j] += z[i][j];
                         } 
-                    } else if (numimage == 2 ){
+                    } else if (numimage == 3){
                         for (var j=0;j<N;j++) {
                             new_z3[j] += z[i][j];
                         }  
-                    } else if (numimage == 3 ){
+                    } else if (numimage == 4){
                         for (var j=0;j<N;j++) {
                             new_z4[j] += z[i][j];
                         } 
@@ -427,12 +425,12 @@
                 interpolation_result = 1
                 console.log(data.generated_image)
                 if (numimage == 5){
-                    var canv = getImgFromArray(data.generated_image, 2, interpolation_result).toDataURL();
+                    var canv = getImgFromArray(data.generated_image, 4, interpolation_result).toDataURL();
                     imageset.append("svg:image")
-                    .attr('width', 28*3.5)
-                    .attr('height', 28*3.5)
-                    .attr('x', 50 +  width / 4 * 3)
-                    .attr('y', height/4 - 50)
+                    .attr('width', 28*9)
+                    .attr('height', 28*9)
+                    .attr('x', 10 + width / 7.5 * (numimage))
+                    .attr('y', height/4 - 120)
                     .attr("xlink:href", canv);
                     numimage += 1
                 }
